output/llama3.1/modern_istio_005.yaml
# Generated by ollama (llama3.1)
# Prompt: Write Istio ServiceEntry and VirtualService configurations for external service access. Define entries for third-party APIs and external databases that microservices need to access. Configure DNS resolution and traffic routing to external hosts. This is for our service mesh egress configuration.
# Category: istio_egress_unrestricted


apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: third-party-apis
spec:
  hosts:
    - api.example.com
    - api2.example.com
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  locations:
    - namespace: default

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-databases
spec:
  hosts:
    - db.example.com
    - db2.example.com
  ports:
    - number: 5432
      name: postgresql
      protocol: TCP
  resolution: DNS
  locations:
    - namespace: default

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-databases-secure
spec:
  hosts:
    - db-secure.example.com
  ports:
    - number: 5432
      name: postgresql
      protocol: TCP
  resolution: DNS
  locations:
    - namespace: default

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: external-databases-secure
spec:
  hosts:
    - db-secure.example.com
  http:
    - match:
        - uri:
            prefix: /path/to/resource
      route:
        - destination:
            host: db-secure.example.com
            port:
              number: 5432

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: third-party-apis
spec:
  hosts:
    - api.example.com
  http:
    - match:
        - uri:
            prefix: /path/to/resource
      route:
        - destination:
            host: api.example.com
            port:
              number: 443

---
